[project]
name = "bybit-trading-bot"
version = "0.1.0"
description = "Production-grade autonomous trading bot for Bybit exchange"
requires-python = ">=3.11"
dependencies = [
    "ccxt==4.5.36",
    "pybit==5.14.0",
    "fastapi==0.128.5",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy[asyncio]==2.0.46",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "redis[hiredis]==7.1.0",
    "pandas==3.0.0",
    "ta==0.11.0",
    "numpy==2.4.2",
    "xgboost==3.1.3",
    "lightgbm==4.6.0",
    "optuna==4.7.0",
    "scikit-learn==1.8.0",
    "structlog==25.5.0",
    "orjson==3.11.7",
    "httpx==0.28.1",
    "websockets==16.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["setuptools==81.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "config*",
    "core*",
    "exchange*",
    "data*",
    "indicators*",
    "strategies*",
    "ml*",
    "risk*",
    "portfolio*",
    "backtesting*",
    "monitoring*",
    "utils*",
    "database*",
    "journal*",
    "scripts*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
